[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testcontainers-oxia"
version = "0.1.0"
description = "Oxia testcontainers in Python"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "testcontainers>=4.0.0",
    "oxia>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/oxia-db/testcontainers/tree/main/testcontainers-python"
Repository = "https://github.com/oxia-db/testcontainers/tree/main/testcontainers-python"

[tool.hatch.build.targets.wheel]
packages = ["oxia_testcontainer"]
