[package]
name = "testcontainers-oxia"
version = "0.0.1"
edition = "2024"

description = "oxia testcontainers in Rust"
license = "Apache-2.0"
repository = "https://github.com/oxia-db/testcontainers/tree/main/testcontainers-rust"
homepage = "https://github.com/oxia-db/testcontainers/tree/main/testcontainers-rust"

[dependencies]
testcontainers = { version = "^0.25" }


[dev-dependencies]
liboxia = "0.0.1"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.28"